crates/uselesskey-jwk/tests/snapshots/snapshots_jwk__snapshot_okp_public_jwk_fields.snap
---
source: crates/uselesskey-jwk/tests/snapshots_jwk.rs
assertion_line: 84
expression: redacted
---
alg: EdDSA
crv: Ed25519
kid: okp-kid-1
kty: OKP
use: sig
x: "[REDACTED]"
